--- a/rollup/core/classes/RollupLogger.cls
+++ b/rollup/core/classes/RollupLogger.cls
@@ -23,10 +23,10 @@ global without sharing virtual class RollupLogger implements ILogger {
     private set;
   }
 
-  public interface ToStringObject {
+  global interface ToStringObject {
   }
 
-  public interface ILogger {
+  global interface ILogger {
     void log(String logString, System.LoggingLevel logLevel);
     void log(String logString, Object logObject, System.LoggingLevel logLevel);
     void save();
@@ -37,13 +37,13 @@ global without sharing virtual class RollupLogger implements ILogger {
     this.log(logString, null, logLevel);
   }
 
-  public virtual void log(String logString, Object logObject, System.LoggingLevel logLevel) {
+  global virtual void log(String logString, Object logObject, System.LoggingLevel logLevel) {
     if (logLevel.ordinal() >= this.currentLoggingLevel.ordinal()) {
       this.innerLog(logString, logObject, logLevel);
     }
   }
 
-  public virtual void save() {
+  global virtual void save() {
     // this is a no-op by default; sub-classes can opt in if they need to perform DML
   }
 
